# hybrid-rl

./: MUJOCO_LOG.TXT  PAPER_COMPLETE.md  PAPER_README.md  README.md  compile_paper.sh  dir.md  paper.tex  pyproject.toml  requirements.txt
configs/: experiment_config.yaml  temp_sweep_config.yaml
envs/: mj_pick_place_env.py  mj_pick_place_env.py.backup  mj_pick_place_env.py.backup_before_v4  mj_pick_place_env.py.bak  mj_pick_place_env.py.bak_qacc  mj_pick_place_env.py.bak_snap  mj_pick_place_env.py.before_v3  mj_pick_place_env.py.pre_attach_fix  mj_pick_place_env.py.prev  pick_place_env.py
figures/: 00_START_HERE.md  INDEX.md  QUICK_REFERENCE.md  README.md  REPORT_ASSETS_SUMMARY.md
lerobot_dataset/: __init__.py  pick_place_builder.py  pick_place_mj_builder.py  pick_place_mj_builder.py.bak
mj_pick_place_sandbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/: bc_policy.py  critic.py  critic.py.bak  multitask_policy.py  policy_loader.py
results/: bc_baseline_comprehensive_results.json  bc_iql_comprehensive_results.json  bc_iql_sweep_K1_noise0.000_comprehensive_results.json  bc_iql_sweep_K1_noise0.050_comprehensive_results.json  bc_iql_sweep_K1_noise0.100_comprehensive_results.json  bc_iql_sweep_K1_noise0.150_comprehensive_results.json  bc_iql_sweep_K4_noise0.000_comprehensive_results.json  bc_iql_sweep_K4_noise0.080_comprehensive_results.json  bc_iql_sweep_K4_noise0.0_comprehensive_results.json  bc_iql_sweep_K4_noise0.150_comprehensive_results.json
scripts/: analyze_phase_presence.py  augment_instructions.py  benchmark_lift_only.py  (+53 more)
(+2463 files in other folders)
